Sticky header (fix missing border-collapse)

--- a/Universe.SqlServerQueryCache/Exporter/Style.css
+++ b/Universe.SqlServerQueryCache/Exporter/Style.css
@@ -1,6 +1,28 @@
-﻿table.Metrics thead th {
-    padding: 4px 4px 4px 16px;
+﻿body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
+
+*, *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+table.Metrics thead {
+    position: sticky;
+    top: 0;
+}
+
+table.Metrics thead th {
+    padding: 4px 4px 4px 16px;
+    background-color: white;
+}
+
+table.Metrics th.TableHeaderGroupCell {
+    padding: 8px 4px;
+}
+
 
 table.Metrics thead th button {
     cursor: pointer;
@@ -35,25 +57,14 @@ table.Metrics thead th.Selected button:after {
 
 .Hidden { display: none; }
 
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-}
-
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .SortedArrow {
     display: inline-block;
     padding-left: 6px;
 }
 table.Metrics {
-    border-collapse: collapse;
+    /*border-collapse: collapse; it does not stick borders */
+    border-spacing: 0px;
 }
 table.Metrics thead th {
     border: 1px solid #999;
@@ -70,6 +81,9 @@ table.Metrics tbody td {
 
 tr.MetricsRow td, .TableHeaderCell {
     white-space: nowrap;
+}
+.TableHeaderCell {
+    /*border: 1px solid #999;*/
 }
 tr.SqlRow td {
     text-align: left !important;
